<resources>
    <string name="app_name">DataNewsAnime</string>
    <string name="user">User</string>
    <string name="pass">Password</string>
    <string name="confpass">Confirm Password</string>
    <string name="login">Login</string>
    <string name="singin">Sing Up</string>
    <string name="email">Email</string>
    <string name="title_activity_login">Login</string>
    <string name="card_image">Card Image</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logout">Logout</string>
    <string name="anime_syn">Synopsis</string>
    <string name="anime_type">Type</string>
    <string name="app_label">DataNewsAnime</string>
    <string name="search_hint">Search Animes Here</string>
    <string name="Search">Search</string>
    <string name="back">Back</string>
</resources>